--- a/week1/first.html
+++ b/week1/first.html
@@ -6,8 +6,16 @@
     <title>Document</title>
 </head>
 <body>
-    <p>first program</p>
-    <h1>this is second line</h1>
+    <h1>FSDL LAB</h1>
+    <p>First program week1</p>
+    <p>Basics of html</p>
+    <p>Tags</p>
+    <img src="https://img.youtube.com/vi/vLhQGFXgpYQ/0.jpg" alt="Fcrit college Vashi" width="200" height="142">
+     <p style="color:blue;">I am a student in Father agnels college Vashi studying in IT department </style></p>
+     
+
+
+   
     
 </body>
 </html>
